CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/sfrosit_t_copay_delinqc_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_copay_delinqc_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_copay_delinqc_hist</externalName>
    <label>Parent Fee Delinquency History</label>
    <pluralLabel>Parent Fee Delinquency History</pluralLabel>
</CustomObject>