CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/amt_delinqc_copay_enrlmt__c.field-meta.xml
<CustomField>
    <fullName>amt_delinqc_copay_enrlmt__c</fullName>
    <description>amt_delinqc_copay_enrlmt</description>
    <externalDeveloperName>amt_delinqc_copay_enrlmt</externalDeveloperName>
    <label>Parent Fee Delinquency Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>