CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/cde_reason_resoln__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_resoln__c</fullName>
    <description>cde_reason_resoln</description>
    <externalDeveloperName>cde_reason_resoln</externalDeveloperName>
    <label>Resolution Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>