CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/dte_month_delinqc__c.field-meta.xml
<CustomField>
    <fullName>dte_month_delinqc__c</fullName>
    <description>dte_month_delinqc</description>
    <externalDeveloperName>dte_month_delinqc</externalDeveloperName>
    <label>Delinquency Month</label>
    <length>3</length>
    <type>Text</type>
</CustomField>