CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/dte_resoln_delinqc__c.field-meta.xml
<CustomField>
    <fullName>dte_resoln_delinqc__c</fullName>
    <description>dte_resoln_delinqc</description>
    <externalDeveloperName>dte_resoln_delinqc</externalDeveloperName>
    <label>Delinquency Resolution Date</label>
    <type>Date</type>
</CustomField>