CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/dte_rptd_delinqc__c.field-meta.xml
<CustomField>
    <fullName>dte_rptd_delinqc__c</fullName>
    <description>dte_rptd_delinqc</description>
    <externalDeveloperName>dte_rptd_delinqc</externalDeveloperName>
    <label>Delinquency Reported Date</label>
    <type>Date</type>
</CustomField>