CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/dte_year_delinqc__c.field-meta.xml
<CustomField>
    <fullName>dte_year_delinqc__c</fullName>
    <description>dte_year_delinqc</description>
    <externalDeveloperName>dte_year_delinqc</externalDeveloperName>
    <label>Delinquency Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>