CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>Case ID</label>
    <length>80</length>
    <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE__c</referenceTo>
    <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_copay_delinqc_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>