CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_copay_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_copay_auth__c</fullName>
    <description>idn_copay_auth</description>
    <externalDeveloperName>idn_copay_auth</externalDeveloperName>
    <label>Identifier Auth Copay</label>
    <length>50</length>
    <referenceTo>batchsit_t_auth_copay__x</referenceTo>
    <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_copay_delinqc_hist</relationshipName>
    <type>ExternalLookup</type>
</CustomField>