CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_copay_delinqc__c.field-meta.xml
<CustomField>
    <fullName>idn_copay_delinqc__c</fullName>
    <description>idn_copay_delinqc</description>
    <externalDeveloperName>idn_copay_delinqc</externalDeveloperName>
    <label>identifier Auth Delinquency</label>
    <length>50</length>
    <referenceTargetField>T_COPAY_DELINQC__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_COPAY_DELINQC__c</referenceTo>
    <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_copay_delinqc_hist1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>