CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_copay_delinqc_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_copay_delinqc_hist__c</fullName>
    <description>idn_copay_delinqc_hist</description>
    <externalDeveloperName>idn_copay_delinqc_hist</externalDeveloperName>
    <label>identifier Auth Delinquency history</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>