CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_enrlmt__c.field-meta.xml
<CustomField>
    <fullName>idn_enrlmt__c</fullName>
    <description>idn_enrlmt</description>
    <externalDeveloperName>idn_enrlmt</externalDeveloperName>
    <label>Authorization Parent Fee ID</label>
    <length>80</length>
    <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_AUTH__c</referenceTo>
    <relationshipLabel>Parent Fee Delinquency Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_copay_delinqc_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>