CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/idn_user_change_last__c.field-meta.xml
<CustomField>
    <fullName>idn_user_change_last__c</fullName>
    <description>idn_user_change_last</description>
    <externalDeveloperName>idn_user_change_last</externalDeveloperName>
    <label>Last Modified Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>