CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/ind_record_curr__c.field-meta.xml
<CustomField>
    <fullName>ind_record_curr__c</fullName>
    <description>ind_record_curr</description>
    <externalDeveloperName>ind_record_curr</externalDeveloperName>
    <label>Current Record ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>