CHATS_SIT/force-app/main/default/objects/sfrosit_t_copay_delinqc_hist__x/fields/nbr_seq_delinqc_copay_enrlmt__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_delinqc_copay_enrlmt__c</fullName>
    <description>nbr_seq_delinqc_copay_enrlmt</description>
    <externalDeveloperName>nbr_seq_delinqc_copay_enrlmt</externalDeveloperName>
    <label>Number Seq_Delinqc auth Enroll</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>